--- a/Hackathon_html.html
+++ b/Hackathon_html.html
@@ -9,7 +9,13 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Cover Template for Bootstrap</title>
+    <title>HACKATHON</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
 
 
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
@@ -24,42 +30,66 @@
     <![endif]-->
 </head>
 
-<body>
+<body class="img">
 
-<div class="site-wrapper">
+<nav class="navbar navbar-inverse stripe1">
+    <div class="container-fluid">
+      <div class="row"> </div>
+        <div class="col-lg-4"> </div>
+        <div class="col-lg-4">
 
-    <div class="site-wrapper-inner">
+        <ul class="nav navbar-nav font-text">
+            <div class="row"> </div>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">FOOD </a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-1 "> <a href="#"  >VEGETABLES</a></li>
+                    <li>  <a href="#">FRUITS</a></li>
+                    <li>  <a href="#" >GRAINS</a></li>
+                    <li>  <a href="#" >BAKERY</a></li>
+                    <li>  <a href="#>CHEESE</a></li>
+                    <li>  <a href="#">NUTS</a></li>
+                    <li>  <a href="#">SPICES</a></li>
+                    <li>  <a href="#">CANDIES</a></li>
+                </ul>
+            </li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CLOTHES </a>
+                <ul class="dropdown-menu">
+                    <li> <a href="#">FASHION</a></li>
+                    <li>  <a href="#">SPORTS</a></li>
+                    <li>  <a href="#">UNDERWEAR</a></li>
+                    <li>  <a href="#">SHOES</a></li>
+                    <li>  <a href="#">GLASSES</a></li>
+                    <li>  <a href="#">BAGS</a></li>
+                </ul>
+            </li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">GIFTS </a>
+                <ul class="dropdown-menu">
+                    <li> <a href="#">HOME</a></li>
+                    <li>  <a href="#">JUDAICA</a></li>
+                    <li>  <a href="#">KITCHEN</a></li>
+                    <li>  <a href="#">JEWELRY</a></li>
+                    <li>  <a href="#">ELECTRONICS</a></li>
+                    <li>  <a href="#">ACCESORIES</a></li>
+                    <li>  <a href="#">BEAUTY</a></li>
+                </ul>
+            </li>
+    </div>
+            <div class="col-lg-4"> </div>
 
-        <div class="cover-container">
+        </ul>
+    </div>
+    </div>
+</nav>
 
-            <div class="masthead clearfix">
-                <div class="inner">
-                    <nav>
-                        <div class="dropdown">
-                            <button class="dropbtn">FOOD</button>
-                            <div class="dropdown-content">
-                                <a href="#">Link 1</a>
-                                <a href="#">Link 2</a>
-                                <a href="#">Link 3</a>
-                            </div>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-
-            <div class="inner cover">
-                <h1 class="cover-heading">SHACK SHUK.</h1>
-                <p class="lead">the best way of shuking</p>
+            <div class="inner cover margin-title">
+                <h1 class="cover-heading class="font-text"">SHACK SHUK.</h1>
+                <p class="lead class="font-text"">the best way of shuking</p>
                 <p class="lead">
-                    <a href="#" class="btn btn-lg btn-default">Learn more</a>
+                    <a href="#" class="btn btn-lg btn-default class="font-text"">SHACK SHUCK US!</a>
                 </p>
             </div>
 
-            <div class="mastfoot">
-                <div class="inner">
-                    <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-                </div>
-            </div>
+
 
         </div>
 
