--- a/Hackathon_html.html
+++ b/Hackathon_html.html
@@ -35,18 +35,18 @@
 <nav class="navbar navbar-inverse stripe1">
     <div class="container-fluid">
       <div class="row"> </div>
-        <div class="col-lg-4"> </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3"> </div>
+        <div class="col-lg-6">
 
         <ul class="nav navbar-nav font-text">
-            <div class="row"> </div>
+
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">FOOD </a>
                 <ul class="dropdown-menu">
                   <li class="dropdown-1 "> <a href="#"  >VEGETABLES</a></li>
                     <li>  <a href="#">FRUITS</a></li>
                     <li>  <a href="#" >GRAINS</a></li>
                     <li>  <a href="#" >BAKERY</a></li>
-                    <li>  <a href="#>CHEESE</a></li>
+                    <li>  <a href="#">CHEESE</a></li>
                     <li>  <a href="#">NUTS</a></li>
                     <li>  <a href="#">SPICES</a></li>
                     <li>  <a href="#">CANDIES</a></li>
@@ -73,27 +73,35 @@
                     <li>  <a href="#">BEAUTY</a></li>
                 </ul>
             </li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">SHOPPING LIST </a>
+                <ul class="dropdown-menu">
+                    <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a> <br>
+                     <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a> <br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a><br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a><br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a> <br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a> <br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a><br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a><br>
+                </ul>
+            </li>
+
+        </ul>
     </div>
-            <div class="col-lg-4"> </div>
+
+            <div class="col-lg-3"> </div>
 
         </ul>
     </div>
     </div>
 </nav>
 
-            <div class="inner cover margin-title">
-                <h1 class="cover-heading class="font-text"">SHACK SHUK.</h1>
-                <p class="lead class="font-text"">the best way of shuking</p>
-                <p class="lead">
-                    <a href="#" class="btn btn-lg btn-default class="font-text"">SHACK SHUCK US!</a>
-                </p>
-            </div>
 
 
 
         </div>
 
-    </div>
+</div>
 
 </div>
 
