--- a/estee.html
+++ b/estee.html
@@ -48,7 +48,7 @@
 
 <textarea  class="comment-margin" type = "text" id = "addComment" placeholder = "Comments" rows="5" cols="100"> </textarea>
  </br>
-<button class="button-sendit" id = "submitScore" onclick="countLetter()"> Send it!  </button>
+<button class="button-sendit" id = "submitScore" onclick="countLetter()"> Shak it!  </button>
 <br>
 <br>
 <br>
