--- a/user_html.html
+++ b/user_html.html
@@ -11,20 +11,30 @@
 
 <body class="img">
 
+    <div class="content-holder" >
 
-    <div class="content-holder">
-    <img  class="imgshuk" src="IMG_3085img.JPG">
-    <div class="stripe1">
-    <p class="comments"> Shop 15</p> <br>
-    <p class="comments">22, HaCarmel St. </p> <br>
-    <p class="comments"> CHEASE </p>
-    </div>
+        <div> <img  class="imgshuk"src="IMG_3085img.JPG">  </div>
+        <div class="stripe1">
 
-    <hr width="100%"> <br>
+            <div class="info"> SHUK 19</div>
+            <div class="info">19, HACARMEL ST </div>
+            <div class="info">CHEASE </div> <br>
+            <div class="acidjs-rating-stars acidjs-rating-disabled">
+                <form>
+                    <input disabled="disabled" type="radio" name="group-3" id="group-3-0" value="5" /><label for="group-3-0"></label><!--
+        --><input disabled="disabled" type="radio" checked="checked" name="group-3" id="group-3-1" value="4" /><label for="group-3-1"></label><!--
+        --><input disabled="disabled" type="radio" name="group-3" id="group-3-2" value="3" /><label for="group-3-2"></label><!--
+        --><input disabled="disabled" type="radio" name="group-3" id="group-3-3" value="2" /><label for="group-3-3"></label><!--
+        --><input disabled="disabled" type="radio" name="group-3" id="group-3-4"  value="1" /><label for="group-3-4"></label>
+                </form>
+            </div>
+
+        </div>
+        </div>
 
 
-</div>
-    <hr width="100%"> <br>
+
+
 
 
 </body>
