--- a/landingpage_html.html
+++ b/landingpage_html.html
@@ -38,7 +38,7 @@
     <h1 class="cover-heading font-text ">SHACK SHUK.</h1> <br>
     <p class="lead font-text">the best way of shuking</p> <br>
     <p class="lead">
-        <a href="#" class="btn btn-lg btn-default font-text">SHACK SHUCK US!</a>
+        <a href="#" class="btn btn-lg btn-default  smalltext">SHACK SHUCK US!</a>
     </p>
 </div>
 
