--- a/Hackathon_html.html
+++ b/Hackathon_html.html
@@ -50,6 +50,7 @@
                     <li>  <a href="#">NUTS</a></li>
                     <li>  <a href="#">SPICES</a></li>
                     <li>  <a href="#">CANDIES</a></li>
+                    <li>  <a href="#">DESSERTS</a></li>
                 </ul>
             </li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CLOTHES </a>
@@ -76,16 +77,28 @@
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">SHOPPING LIST </a>
                 <ul class="dropdown-menu">
                     <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a> <br>
-                     <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a> <br>
+                     <input type="checkbox" name="list"  value="20">  <a href="#">VEGETABLES</a> <br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">CHEEASE</a><br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">NUTS</a><br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">SPICES</a> <br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">CANDIES</a> <br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">DESSERTS</a><br>
                     <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a><br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a><br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a> <br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a> <br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a><br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a><br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">FASHION</a> <br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">SPORTS</a> <br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">UNDERWEAR</a><br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">SHOES</a><br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">GLASSES</a> <br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">BAGS</a><br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">HOME</a><br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">JUDAICA</a><br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">KITCHEN</a> <br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">JEWELRY</a> <br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">ELECTRONICS</a><br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">ACCESORIES</a><br>
+                    <input type="checkbox" name="list"  value="20">  <a href="#">BEAUTY</a> <br>
                 </ul>
             </li>
-
         </ul>
     </div>
 
