--- a/Hackathon_html.html
+++ b/Hackathon_html.html
@@ -76,27 +76,27 @@
             </li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">SHOPPING LIST </a>
                 <ul class="dropdown-menu">
-                    <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a> <br>
-                     <input type="checkbox" name="list"  value="20">  <a href="#">VEGETABLES</a> <br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">CHEEASE</a><br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">NUTS</a><br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">SPICES</a> <br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">CANDIES</a> <br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">DESSERTS</a><br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">FRUITS</a><br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">FASHION</a> <br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">SPORTS</a> <br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">UNDERWEAR</a><br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">SHOES</a><br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">GLASSES</a> <br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">BAGS</a><br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">HOME</a><br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">JUDAICA</a><br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">KITCHEN</a> <br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">JEWELRY</a> <br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">ELECTRONICS</a><br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">ACCESORIES</a><br>
-                    <input type="checkbox" name="list"  value="20">  <a href="#">BEAUTY</a> <br>
+                    <input type="checkbox" name="list"  >  <a href="#">FRUITS</a> <br>
+                     <input type="checkbox" name="list" >  <a href="#">VEGETABLES</a> <br>
+                    <input type="checkbox" name="list"  >  <a href="#">CHEEASE</a><br>
+                    <input type="checkbox" name="list"  >  <a href="#">NUTS</a><br>
+                    <input type="checkbox" name="list"  >  <a href="#">SPICES</a> <br>
+                    <input type="checkbox" name="list"  >  <a href="#">CANDIES</a> <br>
+                    <input type="checkbox" name="list"  >  <a href="#">DESSERTS</a><br>
+                    <input type="checkbox" name="list"  >  <a href="#">FRUITS</a><br>
+                    <input type="checkbox" name="list"  >  <a href="#">FASHION</a> <br>
+                    <input type="checkbox" name="list"  >  <a href="#">SPORTS</a> <br>
+                    <input type="checkbox" name="list"  >  <a href="#">UNDERWEAR</a><br>
+                    <input type="checkbox" name="list"  >  <a href="#">SHOES</a><br>
+                    <input type="checkbox" name="list"  >  <a href="#">GLASSES</a> <br>
+                    <input type="checkbox" name="list"  >  <a href="#">BAGS</a><br>
+                    <input type="checkbox" name="list"  >  <a href="#">HOME</a><br>
+                    <input type="checkbox" name="list"  >  <a href="#">JUDAICA</a><br>
+                    <input type="checkbox" name="list"  >  <a href="#">KITCHEN</a> <br>
+                    <input type="checkbox" name="list"  > <a href="#">JEWELRY</a> <br>
+                    <input type="checkbox" name="list"  >  <a href="#">ELECTRONICS</a><br>
+                    <input type="checkbox" name="list" >  <a href="#">ACCESORIES</a><br>
+                    <input type="checkbox" name="list"  >  <a href="#">BEAUTY</a> <br>
                 </ul>
             </li>
         </ul>
