--- a/user_html.html
+++ b/user_html.html
@@ -12,13 +12,15 @@
 <body class="img">
 
     <div class="content-holder" >
-
-        <div> <img  class="imgshuk"src="IMG_3085img.JPG">  </div>
+<table>
+    <tr>
+        <td>
+        <div> <img  class="imgshuk"src="IMG_3085img.JPG">  </div> </td>
         <div class="stripe1">
-
+            <td>
             <div class="info"> SHUK 19</div>
             <div class="info">19, HACARMEL ST </div>
-            <div class="info">CHEASE </div> <br>
+            <div class="info">CHEESE </div> <br>
             <div class="acidjs-rating-stars acidjs-rating-disabled">
                 <form>
                     <input disabled="disabled" type="radio" name="group-3" id="group-3-0" value="5" /><label for="group-3-0"></label><!--
@@ -28,14 +30,58 @@
         --><input disabled="disabled" type="radio" name="group-3" id="group-3-4"  value="1" /><label for="group-3-4"></label>
                 </form>
             </div>
-
+            </td>
         </div>
+    </tr>
+    <br>
+    <br>
+    <br>
+    <br>
+    <tr>
+        <td>
+            <div> <img  class="imgshuk"src="IMG_3039img.jpg">  </div> </td>
+        <div class="stripe1">
+            <td>
+                <div class="info"> SHUK 21</div>
+                <div class="info">21, HACARMEL ST </div>
+                <div class="info">JEWELRY </div> <br>
+                <div class="acidjs-rating-stars acidjs-rating-disabled">
+                    <form>
+                        <input disabled="disabled" type="radio" name="group-3" id="group-3-0" value="5" /><label for="group-3-0"></label><!--
+        --><input disabled="disabled" type="radio" checked="checked" name="group-3" id="group-3-1" value="4" /><label for="group-3-1"></label><!--
+        --><input disabled="disabled" type="radio" name="group-3" id="group-3-2" value="3" /><label for="group-3-2"></label><!--
+        --><input disabled="disabled" type="radio" name="group-3" id="group-3-3" value="2" /><label for="group-3-3"></label><!--
+        --><input disabled="disabled" type="radio" name="group-3" id="group-3-4"  value="1" /><label for="group-3-4"></label>
+                    </form>
+                </div>
+            </td>
         </div>
-
-
-
-
-
-
+    </tr>
+    <br>
+    <br>
+    <br>
+    <br>
+    <tr>
+        <td>
+            <div> <img  class="imgshuk"src="IMG_3045img.jpg">  </div> </td>
+        <div class="stripe1">
+            <td>
+                <div class="info"> SHUK 23</div>
+                <div class="info">23, HACARMEL ST </div>
+                <div class="info">CANDIES </div> <br>
+                <div class="acidjs-rating-stars acidjs-rating-disabled">
+                    <form>
+                        <input disabled="disabled" type="radio" name="group-3" id="group-3-0" value="5" /><label for="group-3-0"></label><!--
+        --><input disabled="disabled" type="radio" checked="checked" name="group-3" id="group-3-1" value="4" /><label for="group-3-1"></label><!--
+        --><input disabled="disabled" type="radio" name="group-3" id="group-3-2" value="3" /><label for="group-3-2"></label><!--
+        --><input disabled="disabled" type="radio" name="group-3" id="group-3-3" value="2" /><label for="group-3-3"></label><!--
+        --><input disabled="disabled" type="radio" name="group-3" id="group-3-4"  value="1" /><label for="group-3-4"></label>
+                    </form>
+                </div>
+            </td>
+        </div>
+    </tr>
+</table>
+        </div>
 </body>
 </html>
